--- a/ParseTweets.ipynb
+++ b/ParseTweets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,33 +65,39 @@
     "df2 = parse_tweets('tweets4.txt')\n",
     "df3 = parse_tweets('tweets5.txt')\n",
     "df4 = parse_tweets('tweets6.txt')\n",
-    "df5 = parse_tweets('tweets7.txt')"
+    "df5 = parse_tweets('tweets7.txt')\n",
+    "df6 = parse_tweets('tweets10.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_df = pd.concat([df1, df2, df3, df4, df5], axis=0)\n",
-    "combined_df = combined_df.reset_index(drop=True)\n",
-    "combined_df = combined_df.drop_duplicates()"
+    "combined_df = pd.concat([df1, df2, df3, df4, df5,df6], axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "combined_df.to_csv('tweets.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py310",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
