google api vs Nominatim

--- a/models/Location-2.ipynb
+++ b/models/Location-2.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,11 +706,10 @@
     "        return None, None\n",
     "    try:\n",
     "        location = geolocator.geocode(address, timeout=10, country_codes='TR', language='tr', exactly_one=False, limit=5 )\n",
-    "        return location\n",
-    "        #if location:\n",
-    "          #   return location.latitude, location.longitude\n",
-    "        #else:\n",
-    "         #   return None, None\n",
+    "        if location:\n",
+    "            return location.latitude, location.longitude\n",
+    "        else:\n",
+    "            return None, None\n",
     "    except GeocoderTimedOut:\n",
     "        return None, None"
    ]
@@ -944,10 +943,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_coordinates(\"Malatya Yeşilyurt Battalgazi Akçadağ\")"
+   ]
   },
   {
    "cell_type": "code",
